src/objects/Reg_Inventory_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CAS__c</fullName>
        <formula>Reg_Inventory__r.CAS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Regulation__c</controllingField>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reg_Inventory__c</fullName>
        <label>Reg. Inventory</label>
        <referenceTo>Reg_Inventory__c</referenceTo>
        <relationshipLabel>Reg Inventory Detail</relationshipLabel>
        <relationshipName>Reg_Inventory_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Regulation__c</fullName>
        <label>Regulation</label>
        <picklist>
            <picklistValues>
                <fullName>TSCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IECSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC_Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reg Inventory Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CAS__c</columns>
        <columns>Regulation__c</columns>
        <columns>Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RID-{000000000}</displayFormat>
        <label>Reg Inventory Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reg Inventory Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>